modified:   .vscode/settings.json 	modified:   CMakeLists.txt 	modified:   src/Game.cpp 	modified:   src/main.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,10 @@
         "thread": "cpp",
         "semaphore": "cpp",
         "set": "cpp"
+    },
+    "cmake.debugConfig": {
+        "args":[
+            "human"
+        ]
     }
 }
